# FLUGI_maze_game

./: .gitignore  CMakeLists.txt  README.md  build.bat  main.cpp  requirements.txt
agent/: __main__.py
agent/Dashboard/: __init__.py  dashboard.py
agent/Dashboard/config/: __init__.py  dashboard_config.py
agent/MazeAgent/: __init__.py  maze_agent.py
agent/MazeAgent/config/: __init__.py  maze_agent_config.py
agent/ProjectBase/: __init__.py  base.py  setup.py
agent/ReinforcementLearning/: __init__.py  dqn_module.py  reinforcement_learning.py  replay_buffer.py
agent/SupervisedLearning/: __init__.py  cnn_module.py  supervised_learning.py
agent/TrainedModel/: __init__.py  trained_model.py
agent/config/: config.py
agent/interfaces/: __init__.py  callbacks.py  init.py  interfaces.py
agent/training/: __init__.py  chart.py  dqn.py  environment.py  pretrain.py  replay_memory.py  trainer.py
agent/utils/: classes.py  config_callbacks.py  string.py  time.py
agent/utils/agent/: agent.py
agent/utils/dataclass/: base.py
agent/utils/dc/: agent_stats.py  game_state.py
agent/utils/lifespan/: __init__.py  lifespan.py
agent/utils/patch/: __init__.py  patch.py
agent/utils/process_manager/: process_manager.py  process_manager_vars.py  worker.py
agent/utils/web/: web.py
src/config/: Config.h
src/core/: GameObject.h  Vec2.h
src/entities/: Items.h  Player.cpp  Player.h
src/game/: Game.cpp  Game.h
src/graphics/: Renderer.cpp  Renderer.h
src/maze/: Maze.cpp  Maze.h  Survivability.h
src/utils/: ColorLog.h  InputHandler.cpp  InputHandler.h  Terminal.h
(+9 files in other folders)
